projectmanagers/cmake/cmakemanager.cpp
@@ -725,7 +725,6 @@ QStringList resolvePaths(const KUrl& baseUrl, const QStringList& pathsToResolve)
 QList<KDevelop::ProjectFolderItem*> CMakeManager::parse( KDevelop::ProjectFolderItem* item )
 {
     Q_ASSERT(isReloading(item->project()));
-    QList<KDevelop::ProjectFolderItem*> folderList;
     CMakeFolderItem* folder = dynamic_cast<CMakeFolderItem*>( item );
 
     {
@@ -763,7 +762,6 @@ QList<KDevelop::ProjectFolderItem*> CMakeManager::parse( KDevelop::ProjectFolder
 
         data.vm.pushScope();
         ReferencedTopDUContext ctx = includeScript(cmakeListsPath.toLocalFile(), folder->project(), item->url().toLocalFile(), curr);
-        data.vm.popScope();
         folder->setTopDUContext(ctx);
        /*{
         kDebug() << "dumpiiiiiing" << folder->url();
@@ -771,6 +769,7 @@ QList<KDevelop::ProjectFolderItem*> CMakeManager::parse( KDevelop::ProjectFolder
         KDevelop::dumpDUContext(v.context(), false);
         }*/
 
+        QList<KDevelop::ProjectFolderItem*> folderList;
         QStringList alreadyAdded;
         deleteAllLater(castToBase(folder->cleanupBuildFolders(data.subdirectories)));
         foreach (const Subdirectory& subf, data.subdirectories)
@@ -935,6 +934,10 @@ QList<KDevelop::ProjectFolderItem*> CMakeManager::parse( KDevelop::ProjectFolder
             
             setTargetFiles(targetItem, tfiles);
         }
+        foreach(KDevelop::ProjectFolderItem* item, folderList) {
+            parse(item);
+        }
+        data.vm.popScope();
     } else if( folder ) {
         // Only do cmake-stuff if its a cmake folder
         deleteAllLater(castToBase(folder->cleanupBuildFolders(QList<Subdirectory>())));
@@ -946,7 +949,7 @@ QList<KDevelop::ProjectFolderItem*> CMakeManager::parse( KDevelop::ProjectFolder
     // Use item here since folder may be 0.
     reloadFiles(item);
 
-    return folderList;
+    return QList<KDevelop::ProjectFolderItem*>();
 }
 
 ProjectFileItem* containsFile(const KUrl& file, const QList<ProjectFileItem*>& tfiles)
